force-app/main/default/objects/Payment_Details__c/Payment_Details__c.object-meta.xml
<CustomObject>
    <label>Payment Detail</label>
    <nameField>
        <displayFormat>PD-{0000}</displayFormat>
        <label>Payment Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>