force-app/main/default/objects/Payment_Details__c/fields/Payment_Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Name__c</fullName>
    <formula>Payment_Method__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Method Name</label>
    <type>Text</type>
</CustomField>