force-app/main/default/objects/Payment_Details__c/fields/Total_Payed__c.field-meta.xml
<CustomField>
    <fullName>Total_Payed__c</fullName>
    <formula>Order__r.Total_Payed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Payed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>