force-app/main/default/objects/Payment_Details__c/fields/Total_to_Pay__c.field-meta.xml
<CustomField>
    <fullName>Total_to_Pay__c</fullName>
    <formula>Order__r.Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total to Pay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>